Fix bug in SchemaChange, where it would try to get CompatabilityLevel for a non-existent Schema. Use lombok many more places. Use isEmpty() instead of checking for Collection length. Renamed some fields to make lombomk annotations easier to inject. Bump Kafka version to 7.5.2. Update several dependency versions. Remove hamcrest, and finish migrating all tests to Junit 5. Other general refactoring/cleanup.